--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -6,50 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".calculator">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="39dp"
-        android:background="@color/black"
-        android:backgroundTint="#3E17668A"
-        android:gravity="center"
-        android:text="@string/calculatrice"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        tools:ignore="MissingConstraints,TextContrastCheck" />
-
-    <TextView
-        android:id="@+id/screen"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="36dp"
-        android:background="#C5C2C2"
-        android:fontFamily="monospace"
-        android:gravity="end"
-        android:text="0"
-        android:textAlignment="viewEnd"
-        android:textSize="50sp"
-        app:layout_anchor="@+id/screen"
-        app:layout_anchorGravity="center"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="NotSibling" />
-
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
-        android:layout_height="473dp"
-        android:layout_marginTop="260dp"
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"
+        android:gravity="center"
         android:shrinkColumns="*"
         android:stretchColumns="*"
-        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="83dp"
+                android:layout_span="4"
+                android:background="@color/black"
+                android:backgroundTint="#3E17668A"
+                android:gravity="center"
+                android:text="@string/calculatrice"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="30sp"
+                tools:ignore="MissingConstraints,TextContrastCheck" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/screen"
+                android:layout_width="match_parent"
+                android:layout_height="196dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="4dp"
+                android:layout_span="4"
+                android:background="#C5C2C2"
+                android:fontFamily="monospace"
+                android:gravity="center|end"
+                android:text="0"
+                android:textAlignment="viewEnd"
+                android:textSize="50sp"
+                app:layout_anchor="@+id/screen"
+                app:layout_anchorGravity="center"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="NotSibling" />
+
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
@@ -61,6 +76,7 @@
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
                 android:backgroundTint="#A60D0D"
+                android:onClick="effacer"
                 android:shrinkColumns="*"
                 android:stretchColumns="*"
                 android:text="AC"
@@ -70,14 +86,15 @@
                 android:id="@+id/btnPlusOrMoins"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
+                android:onClick="plusMoins"
                 android:text="+/-"
                 android:textSize="25sp" />
 
             <Button
-                android:id="@+id/btnReste"
+                android:id="@+id/btnMod"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="setOperator"
+                android:onClick="setOperation"
                 android:text="%"
                 android:textSize="25sp" />
 
@@ -87,7 +104,7 @@
                 android:layout_width="133dp"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="setOperator"
+                android:onClick="setOperation"
                 android:text="/"
                 android:textSize="25sp" />
         </TableRow>
@@ -101,15 +118,15 @@
                 android:id="@+id/btn7"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
+                android:onClick="ajouterChiffre"
                 android:text="7"
-                android:onClick="addNumber"
                 android:textSize="25sp" />
 
             <Button
                 android:id="@+id/btn8"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="addNumber"
+                android:onClick="ajouterChiffre"
                 android:text="8"
                 android:textSize="25sp" />
 
@@ -117,7 +134,7 @@
                 android:id="@+id/btn9"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="addNumber"
+                android:onClick="ajouterChiffre"
                 android:text="9"
                 android:textSize="25sp" />
 
@@ -126,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="setOperator"
+                android:onClick="setOperation"
                 android:text="*"
                 android:textSize="25sp" />
         </TableRow>
@@ -141,7 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="addNumber"
+                android:onClick="ajouterChiffre"
                 android:text="4"
                 android:textSize="25sp" />
 
@@ -150,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="addNumber"
+                android:onClick="ajouterChiffre"
                 android:text="5"
                 android:textSize="25sp" />
 
@@ -159,7 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="addNumber"
+                android:onClick="ajouterChiffre"
                 android:text="6"
                 android:textSize="25sp" />
 
@@ -168,7 +185,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="setOperator"
+                android:onClick="setOperation"
                 android:text="-"
                 android:textSize="25sp" />
         </TableRow>
@@ -183,8 +200,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
+                android:onClick="ajouterChiffre"
                 android:text="1"
-                android:onClick="addNumber"
                 android:textSize="25sp" />
 
             <Button
@@ -192,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="addNumber"
+                android:onClick="ajouterChiffre"
                 android:text="2"
                 android:textSize="25sp" />
 
@@ -200,8 +217,8 @@
                 android:id="@+id/btn3"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
-                android:onClick="addNumber"
                 android:layout_margin="4dp"
+                android:onClick="ajouterChiffre"
                 android:text="3"
                 android:textSize="25sp" />
 
@@ -210,7 +227,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
-                android:onClick="setOperator"
+                android:onClick="setOperation"
                 android:text="+"
                 android:textSize="25sp" />
         </TableRow>
@@ -226,8 +243,8 @@
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
                 android:layout_span="2"
+                android:onClick="ajouterChiffre"
                 android:text="0"
-                android:onClick="addNumber"
                 android:textSize="25sp" />
 
             <Button
@@ -235,6 +252,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
+                android:onClick="ValDecimal"
                 android:text="."
                 android:textSize="25sp" />
 
@@ -243,6 +261,7 @@
                 android:layout_width="129dp"
                 android:layout_height="80dp"
                 android:layout_margin="4dp"
+                android:onClick="calculer"
                 android:text="="
                 android:textSize="25sp" />
         </TableRow>
